# SMUCompraSimulacion

./: .gitignore  README.md  comprador.py  mercado.py  model.py  pyproject.toml  simulation.ipynb  utils.py
