[tool.poetry]
name = "compra_simulacion"
version = "0.1.0"
description = ""
authors = ["Diego Ros", "Luis Soto"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
agentpy = "^0.1.5"



[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
ruff = "^0.0.217"
ipykernel = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]
